--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <button type="button">50&percnt;</button>
               <input type="text" class="custom" placeholder="Custom">
             </div>
-            <label for="people">Number of People</label>
+            <label for="people">Number of People <span>Can't be zero</span></label>
             <input type="text" name="people" id="people" placeholder="0">
           </div>
           <div class="tip-amount-total">
